added a data template as models to pass to the controllers while listing to requests

--- a/views/about.page.html
+++ b/views/about.page.html
@@ -6,6 +6,7 @@
         <div class="col">
             <h1>About Page</h1>
             <p>This is an about page</p>
+            <p>{{index .StringMap "test"}}</p>
         </div>
     </div>
 </div>
