simple server done

--- a/views/home.page.html
+++ b/views/home.page.html
@@ -6,6 +6,7 @@
         <div class="col">
             <h1>HomePage</h1>
             <p>This is homepage</p>
+            <a href="/about">About Page</a>
         </div>
     </div>
 </div>
