--- a/views/about.page.html
+++ b/views/about.page.html
@@ -6,6 +6,14 @@
         <div class="col">
             <h1>About Page</h1>
             <p>This is an about page</p>
+            <p>{{index .StringMap "test"}}</p>
+            <p>
+                {{if ne (index .StringMap "remote_ip") ""}}
+                    Remote IP: {{index .StringMap "remote_ip"}}
+                {{else}}
+                    Please visit <a href="/">HomePage</a>
+                {{end}}
+            </p>
         </div>
     </div>
 </div>
